--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     
 <div>
-<h1 class="cal-heading">Calculator</h1>
+<h1 class="cal-heading">CALCULATOR</h1>
 
 <div class="row">
     <input class="input" type="text"/>
