--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="button wclass">C</button>
         <button class="button wclass">%</button>
         <button class="button  wclass">x²</button>
-        <button class="button mclass  yclass">M-</button>
+        <button class="button mclass  yclass">​x​3</button>
     </div>
 
 
